--- a/Desafio_12.ipynb
+++ b/Desafio_12.ipynb
@@ -1,96 +1,250 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "anaconda-cloud": {},
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.5"
-    },
-    "colab": {
-      "name": "Desafio 12.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "view-in-github"
+   },
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/WittmannF/br-data-science/blob/master/python/challenges/Desafio_12.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
-  "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "AYHY2YXQf6J2"
+   },
+   "source": [
+    "### Desafio 12\n",
+    "\n",
+    "Escreva uma função em Python para verificar a validade de uma senha.\n",
+    "\n",
+    "Validação:\n",
+    "\n",
+    "* Pelo menos 1 letra entre [a-z] e 1 letra entre [A-Z].\n",
+    "* Pelo menos 1 número entre [0-9].\n",
+    "* Pelo menos 1 caractere de [$ # @].\n",
+    "* Comprimento mínimo de 6 caracteres.\n",
+    "* Comprimento máximo de 16 caracteres.\n",
+    "\n",
+    "Entradas: \"12345678\", \"J3sus0\", \"#Te5t300\", \"J*90j12374\", \"Michheeul\", \"Monk3y6\"\n",
+    "\n",
+    "A saída deve ser a senha e um texto indicando se a senha é válida ou inválida:\n",
+    "\n",
+    "```\n",
+    "\"1234\" - Senha inválida\n",
+    "\"Qw#1234\" - Senha válida\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "UGgtGYGGf6J3"
+   },
+   "outputs": [],
+   "source": [
+    "def senha(entrada):\n",
+    "    import string\n",
+    "    senha = list(entrada)\n",
+    "    contador_lowercase = 0\n",
+    "    contador_uppercase = 0\n",
+    "    contador_digitos = 0\n",
+    "    contador_etc = 0\n",
+    "    \n",
+    "    if 6 > len(entrada) > 16 :\n",
+    "        return 'Senha inválida'\n",
+    "    \n",
+    "    for etc in ['$','#','@']:\n",
+    "        if etc in senha:\n",
+    "            contador_etc +=1\n",
+    "    if contador_etc == 0:\n",
+    "        return 'Senha inválida'\n",
+    "\n",
+    "    for letra in list(string.ascii_lowercase):\n",
+    "        if letra in senha:\n",
+    "            contador_lowercase +=1            \n",
+    "    if contador_lowercase == 0:\n",
+    "        return 'Senha inválida'\n",
+    "    \n",
+    "    for letra in list(string.ascii_uppercase):\n",
+    "        if letra in senha:\n",
+    "            contador_uppercase += 1\n",
+    "    if contador_uppercase == 0:\n",
+    "        return 'Senha inválida'\n",
+    "  \n",
+    "    for num in list(range(10)):\n",
+    "        if num in senha:\n",
+    "            contador_digitos += 1\n",
+    "    if contador_digitos == 0:\n",
+    "        return 'Senha inválida'\n",
+    "\n",
+    "    else:\n",
+    "        return 'Senha valida'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "n8F01NzD9uHm"
+   },
+   "outputs": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/WittmannF/br-data-science/blob/master/python/challenges/Desafio_12.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+     "data": {
+      "text/plain": [
+       "'Senha inválida'"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "AYHY2YXQf6J2",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Desafio 12\n",
-        "\n",
-        "Escreva uma função em Python para verificar a validade de uma senha.\n",
-        "\n",
-        "Validação:\n",
-        "\n",
-        "* Pelo menos 1 letra entre [a-z] e 1 letra entre [A-Z].\n",
-        "* Pelo menos 1 número entre [0-9].\n",
-        "* Pelo menos 1 caractere de [$ # @].\n",
-        "* Comprimento mínimo de 6 caracteres.\n",
-        "* Comprimento máximo de 16 caracteres.\n",
-        "\n",
-        "Entradas: \"12345678\", \"J3sus0\", \"#Te5t300\", \"J*90j12374\", \"Michheeul\", \"Monk3y6\"\n",
-        "\n",
-        "A saída deve ser a senha e um texto indicando se a senha é válida ou inválida:\n",
-        "\n",
-        "```\n",
-        "\"1234\" - Senha inválida\n",
-        "\"Qw#1234\" - Senha válida\n",
-        "```"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UGgtGYGGf6J3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Seu código"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "n8F01NzD9uHm",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-  ]
+   ],
+   "source": [
+    "senha('12345678')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Senha inválida'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senha('J3sus0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Senha inválida'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senha('#Te5t300')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Senha inválida'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senha('J*90j12374')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Senha inválida'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senha('Michheeul')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Senha inválida'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senha('Monk3y6')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "anaconda-cloud": {},
+  "colab": {
+   "include_colab_link": true,
+   "name": "Desafio 12.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
