--- a/Desafio_12.ipynb
+++ b/Desafio_12.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -49,15 +49,16 @@
    },
    "outputs": [],
    "source": [
+    "import string\n",
+    "\n",
     "def senha(entrada):\n",
-    "    import string\n",
     "    senha = list(entrada)\n",
     "    contador_lowercase = 0\n",
     "    contador_uppercase = 0\n",
     "    contador_digitos = 0\n",
     "    contador_etc = 0\n",
     "    \n",
-    "    if 6 > len(entrada) > 16 :\n",
+    "    if 6 >= len(entrada) >= 16 :\n",
     "        return 'Senha inválida'\n",
     "    \n",
     "    for etc in ['$','#','@']:\n",
@@ -79,23 +80,84 @@
     "        return 'Senha inválida'\n",
     "  \n",
     "    for num in list(range(10)):\n",
-    "        if num in senha:\n",
+    "        if str(num) in senha:\n",
     "            contador_digitos += 1\n",
     "    if contador_digitos == 0:\n",
     "        return 'Senha inválida'\n",
     "\n",
     "    else:\n",
-    "        return 'Senha valida'"
+    "        return 'Senha valida'\n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "n8F01NzD9uHm"
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Senha inválida'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senha('12345678')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Senha inválida'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senha('J3sus0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Senha valida'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senha('#Te5t300')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -109,7 +171,7 @@
     }
    ],
    "source": [
-    "senha('12345678')"
+    "senha('J*90j12374')"
    ]
   },
   {
@@ -129,72 +191,12 @@
     }
    ],
    "source": [
-    "senha('J3sus0')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Senha inválida'"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "senha('#Te5t300')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Senha inválida'"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "senha('J*90j12374')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Senha inválida'"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "senha('Michheeul')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +205,7 @@
        "'Senha inválida'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
